Bug 1071088 - Hover-area is cut off at the bottom of the tiles [r=adw] Use the same hover css selector as others for title/shadow/border.

--- a/browser/themes/shared/newtab/newTab.inc.css
+++ b/browser/themes/shared/newtab/newTab.inc.css
@@ -122,7 +122,7 @@
   transition: opacity 100ms ease-out;
 }
 
-.newtab-thumbnail.enhanced-content:hover {
+.newtab-site:hover .newtab-thumbnail.enhanced-content {
   opacity: 0;
 }
 
